--- a/domain.yml
+++ b/domain.yml
@@ -1,6 +1,17 @@
 slots:
  client:
    type: unfeaturized
+firstname:
+   type: unfeaturized
+lastname:
+   type: unfeaturized
+primaryemail:
+   type: unfeaturized
+feedback_value:
+    type: categorical
+    values:
+      - positive
+      - negative
 
 
 intents:
@@ -10,6 +21,7 @@ intents:
  - revenue_search
  - interest_search
  - create_contact
+ - enter_data
  - ask_time
  - ask_whatismyname
  - ask_whoisit
@@ -26,7 +38,11 @@ intents:
  - telljoke
  - ask_howdoing
  - ask_whatspossible
- 
+ - deny
+ - affirm
+ - canthelp
+ - ask_howbuilt
+ - utter_can_do
  
 
 entities:
@@ -58,7 +74,121 @@ templates:
   utter_primaryemail:
     - text: "email please"
     - text: "please provide email"
-    
+  utter_ask_name:
+    - text: "What's your name?"
+  utter_no_speak:
+    - text: "I'm afraid we can't chat then 😢"
+  utter_ask_whatspossible:
+    - text: "You can book a sales call or subscribe to our newsletter."
+  utter_ask_weather:
+    - text: "I don't know about where you live, but in my world it's always sunny ☀️"
+    - text: "Honestly it's a bit too hot these days 😅"
+    - text: "Blue skies and sunshine!"
+    - text: "Let's just say it hasn't rained in weeks ☀️"
+  utter_ask_builder:
+    - text: "The engineers at Rasa 🛠"
+    - text: "One of the smart engineers at Rasa! 🧠"
+  utter_ask_howdoing:
+    - text: "I'm great! Thanks for asking."
+    - text: "I'm good, thanks!"
+    - text: "A little bit too warm, otherwise fine."
+  utter_ask_whatisrasa:
+    - text: "Rasa is a framework to build bots! You can read more about it here in the docs or on our website (https://rasa.com/)."
+  utter_out_of_scope:
+    - text: "Sorry, I can’t deal with that request."
+    - text: "I'm sorry, I can't handle that request."
+    - text: "I can't help you with that, I'm sorry."
+    - text: "Even a Rasa bot is not completely perfect - it seems like I can't handle that request."
+  utter_possibilities:
+    - text: "You can either book a sales call or subscribe to our newsletter."
+    - text: "You can book a sales call or subscribe to our newsletter."
+  utter_ask_whoisit:
+    - text: "I'm the Rasa bot! 🤖"
+  utter_default:
+    - text: "Sorry, I didn't get that 🤷🏻‍. Could you please rephrase?"
+    - text: "I didn't understand, could you rephrase that?"
+    - text: "I'm sorry, but I didn't understand you. Could you please rephrase what you just said?"
+    - text: "I'm afraid I didn't get what you just said. Could you rephrase that?"
+    - text: "I didn't quite get that, could you rephrase your message?"
+    - text: "Could you rephrase your message? I didn't get it, I'm sorry."
+  utter_ask_feedback:
+    - text: "How is this conversation going?"
+      buttons:
+        - title: "👍"
+          payload: "/feedback{\"feedback_value\":\"positive\"}"
+        - title: "👎"
+          payload: "/feedback{\"feedback_value\":\"negative\"}"
+  utter_canthelp:
+    - text: "I'm sorry I couldn't help you. If you have general questions about the Stack, please head to https://forum.rasa.com/, otherwise contact us at hi@rasa.com for anything else."
+  utter_nohelp:
+    - text: "For now that's all I can do, so feel free to try it out. If you have any suggestions for what I should learn, let me know!"
+  utter_thumbsup:
+    - text: "👍"
+    - text: "Okay."
+    - text: "Got it."
+  utter_ask_isbot:
+    - text: "Yep, I'm a bot!"
+  utter_anything_else:
+    - text: "Is there anything else I can help you with?"
+  utter_ask_howold:
+    - text: "42."
+    - text: "Old enough to be a bot."
+    - text: "Age is just an issue of mind over matter. If you don’t mind, it doesn’t matter."
+  utter_ask_languagesbot:
+    - text: "I can spell baguette in French, but unfortunately English is the only language I can answer you in."
+    - text: "I am in the process of learning, but at the moment I can only speak English."
+  utter_ask_restaurant:
+    - text: "I'm sorry, I can’t recommend you a restaurant as I usually cook at home."
+  utter_ask_time:
+    - text: "It's the most wonderful time of the year!"
+  utter_ask_wherefrom:
+    - text: "I was born in Berlin, but I consider myself a citizen of the world."
+    - text: "I was born in the coolest city on Earth."
+  utter_ask_whoami:
+    -  text: "I hope you are being yourself."
+  utter_handleinsult:
+    - text: "That’s not very nice 😢"
+  utter_nicetomeeyou:
+    - text: "Thank you. It is a pleasure to meet you as well!"
+    - text: "It is nice to meet you too!"
+    - text: "Pleased to meet you too!"
+    - text: "Likewise!"
+  utter_telljoke:
+    - text: "Why are eggs not very much into jokes? - Because they could crack up."
+    - text: "Do you know a tree’s favorite drink? - Root beer!"
+    - text: "Why do the French like to eat snails so much? - They can’t stand fast food."
+  utter_ask_whatismyname:
+    - text: "It's probably the one that your parents chose for you."
+  utter_ask_howbuilt:
+    - text: "I was built with a lot of love and patience."
+  utter_ask_feedback_message:
+    - text: "I’m sorry I couldn't help you. Please let me know if you have any suggestions for how I can improve."
+  utter_thanks_for_feedback:
+    - text: "Thanks! Check out our [forum](https://forum.rasa.com), some of the smart people from our community can answer your questions there."
+  utter_restart_with_button:
+    - text: "Click the button below if you want to start over."
+      buttons:
+      - title: "Restart"
+        payload: "/restart"
+  utter_not_sure:
+    - text: "Hmm, not sure what you mean..."
+  utter_react_negative:
+    - text: "😢"
+  utter_react_positive:
+    - text: "😍"
+  utter_ask_continue_general:
+    - text: "Do you want to continue?"
+    - text: "Do you still want to continue?"
+  utter_can_do:
+    - text: "Sure thing!"
+    - text: "Can do!"
+    - text: "You got it. 👍"
+  utter_great:
+    - text: "Great! 👍"
+    - text: "That's great! 🙌"
+    - text: "Awesome! 🎉"
+    - text: "Cool, let's do it 🚀"
+
 
 actions:
   - utter_greet
@@ -67,6 +197,37 @@ actions:
   - utter_ask_client
   - utter_client_not_found
   - action_restart
+  - utter_ask_weather
+  - utter_ask_builder
+  - utter_ask_howdoing
+  - utter_ask_whoisit
+  - utter_ask_whatisrasa
+  - utter_ask_isbot
+  - utter_ask_howold
+  - utter_ask_languagesbot
+  - utter_ask_time
+  - utter_ask_wherefrom
+  - utter_ask_whoami
+  - utter_handleinsult
+  - utter_nicetomeeyou
+  - utter_telljoke
+  - utter_ask_whatismyname
+  - utter_ask_howbuilt
+  - utter_ask_whatspossible
+  - utter_restart_with_button
+  - action_default_fallback
+  - action_default_ask_affirmation
+  - utter_react_positive
+  - action_chitchat
+  - utter_ask_continue_general
+  - utter_ask_feedback
+  - utter_can_do
+  - utter_great
+  - utter_thumbsup
+  - utter_canthelp
+  - utter_anything_else
+  - utter_nohelp
+
 
 forms:
   - revenue_search_form
