--- a/domain.yml
+++ b/domain.yml
@@ -1,57 +1,56 @@
+intents:
+- affirm
+- ask_builder
+- ask_howbuilt
+- ask_howdoing
+- ask_howold
+- ask_isbot
+- ask_languagesbot
+- ask_time
+- ask_weather
+- ask_whatismyname
+- ask_whatisrasa
+- ask_whatspossible
+- ask_wherefrom
+- ask_whoami
+- ask_whoisit
+- canthelp
+- create_contact
+- deny
+- enter_data
+- goodbye
+- greet
+- handleinsult
+- interest_search
+- nicetomeeyou
+- revenue_search
+- telljoke
+- thanks
+- out_of_scope
+
+
+entities:
+- client
+- lastname
+- number
+- firstname
+- primaryemail
+
 slots:
  client:
    type: unfeaturized
-firstname:
+ firstname:
    type: unfeaturized
-lastname:
+ lastname:
    type: unfeaturized
-primaryemail:
+ primaryemail:
    type: unfeaturized
-feedback_value:
+ feedback_value:
     type: categorical
     values:
       - positive
       - negative
-
-
-intents:
- - greet
- - thanks
- - goodbye
- - revenue_search
- - interest_search
- - create_contact
- - enter_data
- - ask_time
- - ask_whatismyname
- - ask_whoisit
- - ask_wherefrom
- - ask_whatisrasa
- - ask_whoami
- - ask_isbot
- - handleinsult
- - ask_weather
- - ask_howold
- - ask_builder
- - ask_languagesbot
- - nicetomeeyou
- - telljoke
- - ask_howdoing
- - ask_whatspossible
- - deny
- - affirm
- - canthelp
- - ask_howbuilt
- - utter_can_do
- 
-
-entities:
-  - client
-  - firstname
-  - lastname
-  - primaryemail
-
-
+  
 templates:
   utter_greet:
     - text: "Hello! I am flight deck assistant. I can provide information about revenue, coverage, contacts etc. So what are you looking for?"    
@@ -189,7 +188,6 @@ templates:
     - text: "Awesome! 🎉"
     - text: "Cool, let's do it 🚀"
 
-
 actions:
   - utter_greet
   - utter_goodbye
@@ -227,9 +225,3 @@ actions:
   - utter_canthelp
   - utter_anything_else
   - utter_nohelp
-
-
-forms:
-  - revenue_search_form
-  - interest_search_form
-  - create_contact_form
